# ENG_FinOpsETL

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  app.py  crud_tables.py  flow_etl.ipynb  flow_etl.py  mypy.ini  prefect.yaml  pyproject.toml  render.yaml  requirements.txt
flows/: flow_etl.py  flow_etl_databricks.py  flow_ohlc.py
