[project]
name = "eng-finopsetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "detect-secrets>=1.5.0",
    "flask>=3.1.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "prefect>=3.6.13",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
